2012-08-19  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* lisp/core.lisp.in (primitiveLoad): New.  Export.
	($delayedFFI): Likewise.
	* lisp/Makefile.in (oa_delay_ffi): New.
	(edit): Update.
	* interp/sys-utility.boot: import sys-constants instead of sys-os.
	* interp/sys-driver.boot (%sysInit): Do not loadSystemRuntimeCore.
	(loadDelayedFFI): New.
	(executeSpadScript): Call it.
	(compileSpadLibrary): Likewise.
	(buildInitdbHandler): Likewise.
	(systemMain): Likewise.
	* interp/util.lisp (BUILD-INTERPSYS): Likewise.
	* interp/Makefile.in (oa_target_moddir): New.
	(OA_FFI_MOD): Likewise.
	(OA_FFI_OBJ): Define conditionally.
	(OBJS): Use it.
	($(oa_target_delayed)): New rule.
	(oa_target_delayed): New.
	(oa_target_ffi): Define conditionally.
	(${SAVESYS}): Require it.
	(${AXIOMSYS}): Likewise.
	(sys-utility.$(FASLEXT)): Now require sys-constants.$(FASLEXT).

2012-08-18  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* boot/ast.boot (genSBCLnativeTranslation): Do no prepend an
	underbar when WIN32 (no longer necessary.)
	* include/open-axiom.h (OPENAXIOM_EXPORT): Fix thino.

2012-08-18  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* include/sockio.h (connect_to_local_server): First parameter now
	const char*.
	* include/pixmap.h (zzopen): Second parameter now const char*.
	* lib/pixmap.c: Propagate change.
	* lib/sockio-c.c: Likewise.
	* hyper/parse-types.c (parse_verbatim): Tidy.
	* hyper/spadint.c (print_source_to_string1): Likewise.
	* hyper/initx.h (init_top_window): Change parameter type to const
	char*.
	* hyper/initx.c: Propagate change.
	* hyper/titlebar.c: Tidy.
	(set_name_and_icon): icon_name is now of type const char*.
	(get_border_properties): bwidth is not of type const char*.
	(mergeDatabases): classname is now of type const char*.
	(is_it_850): probtbl.name is now of type const char*.

2012-08-18  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* include/util.H1 (getmemWithLine): Second argument is now const char*.
	(saymemWithLine): First argument is now char*.